--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -3,3 +3,33 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+$xdcolor: #1c1642;
+$dcolor: #313f86;
+$ncolor: #26618d;
+$lcolor: #1791de;
+$xlcolor: #5bdef0;
+
+$mfont: Roboto,
+-apple-system,
+BlinkMacSystemFont,
+'Segoe UI',
+Roboto,
+Oxygen,
+Ubuntu,
+Cantarell,
+'Open Sans',
+'Helvetica Neue',
+sans-serif;
+
+$sfont: Raleway,
+-apple-system,
+BlinkMacSystemFont,
+'Segoe UI',
+Roboto,
+Oxygen,
+Ubuntu,
+Cantarell,
+'Open Sans',
+'Helvetica Neue',
+sans-serif;
