--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,13 +1,160 @@
 @media only screen and (min-width : 320px) {}
 
 
-@media only screen and (min-width : 480px) {}
+@media only screen and (min-width : 540px) {
+    .projects {
+        &-item {
+            &-links {
+                &--link {
+                    height: 80px;
+                    width: 80px;
+                    font-size: 3rem;
+
+                    &>img {
+                        width: 40px;
+                    }
+                }
+            }
+        }
+    }
+
+}
 
 
 @media only screen and (min-width : 768px) {}
 
 
-@media only screen and (min-width : 992px) {}
+@media only screen and (min-width : 992px) {
+    .hero {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 30%;
+
+        &::before {
+            border-left: unset;
+            border-top: 15px solid transparent;
+            border-right: 15px solid white;
+            border-bottom: 15px solid transparent;
+            bottom: 50%;
+            right: 0;
+            transform: translateY(-50%);
+        }
+    }
+
+    main {
+        padding-left: 30%;
+    }
+}
 
 
-@media only screen and (min-width : 1200px) {}
+@media only screen and (min-width : 1200px) {
+    .hero {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 25%;
+
+        &::before {
+            border-left: unset;
+            border-top: 15px solid transparent;
+            border-right: 15px solid white;
+            border-bottom: 15px solid transparent;
+            bottom: 50%;
+            right: 0;
+            transform: translateY(-50%);
+        }
+    }
+
+    main {
+        padding-left: 25%;
+        padding-right: 70px;
+    }
+
+    .divide {
+        column-count: 2;
+        column-gap: 40px;
+
+        // column-fill: balance;
+        &>* {
+            font-size: 1.1rem;
+            -webkit-column-break-inside: avoid;
+        }
+    }
+
+    .projects {
+        &-item {
+            &-wrapper {
+                position: relative;
+            }
+
+            &-links {
+                flex-flow: column;
+
+                &--link {
+                    margin: 30px 0;
+                    z-index: 2;
+
+                    &>* {
+                        transform: rotate(90deg);
+                        transition: all 0.5s ease-in-out;
+
+                    }
+                }
+
+                &-head {
+                    transform: rotate(90deg);
+                    padding: 0 !important;
+                    transition: all 0.5s ease-in-out;
+                }
+
+                &-wrapper {
+
+                    margin-right: -70px;
+                    position: absolute;
+                    height: 100vh;
+                    top: 10%;
+                    right: 0;
+
+
+                    &:hover .projects-item-links--info {
+                        right: 145px;
+                        width: 155px;
+                    }
+
+                    &:hover .projects-item-links-head {
+                        color: $lcolor;
+                        // font-size: 1.8rem;
+                    }
+
+                    &:hover .projects-item-links--link>* {
+                        transform: rotate(0deg);
+                    }
+
+                }
+
+                &--info {
+                    margin: 0;
+                    display: inline-block;
+                    position: relative;
+                    top: 90px;
+                    background: $lcolor;
+                    font-size: 1.2rem;
+                    color: white;
+                    padding: 10px 0 10px 5px;
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                    margin-right: -70px;
+                    white-space: nowrap;
+                    right: 20px;
+                    width: 0;
+                    overflow: hidden;
+                    transition: all 0.5s ease-in-out;
+                }
+            }
+        }
+    }
+
+}
