--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,117 @@
 @import "fonts";
 @import "config";
+@import "basics";
+
+@import "aside";
+@import "contacts-skills";
 
 // My style
-body {
-    font-family: Raleway;
+
+
+
+.projects {
+    &-item {
+        &-wrapper {
+
+            padding: 20px;
+            padding-top: 30px;
+
+            &>* {
+                margin-top: 15px;
+                // color: white;
+                // color: $lcolor;
+            }
+
+            & h3 {
+                padding: 30px 0 15px 0;
+                font-size: 1.5rem;
+                color: $dcolor;
+                font-family: $sfont;
+
+            }
+        }
+
+        &-heading {
+            // margin: 10px;
+            display: inline-flex;
+            align-items: center;
+
+            &-number {
+                display: inline-block;
+                background-color: $xdcolor;
+                color: $xlcolor;
+                padding: 15px;
+                font-size: 2rem;
+                font-weight: bold;
+                border-radius: 7px;
+            }
+
+            &-name {
+                display: inline-block;
+                background-color: $dcolor;
+                color: $xlcolor;
+                padding: 15px;
+                font-size: 1.3rem;
+            }
+        }
+
+        &-image {
+            width: 100%;
+        }
+
+        &-links {
+            display: flex;
+            flex-flow: row;
+            align-items: center;
+            justify-content: space-evenly;
+            align-items: center;
+            
+
+            &-head {
+                margin-bottom: 15px;
+            }
+
+            &--info {
+                display: none;
+            }
+
+            &--link {
+                display: inline-block;
+                height: 60px;
+                width: 60px;
+                font-size: 2.5rem;
+                color: $xlcolor;
+                background-color: $ncolor;
+                display: flex;
+                flex-flow: row;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+
+                &>img {
+                    width: 35px;
+                    display: block;
+                }
+            }
+        }
+
+        &-tech {
+            &-container {
+                color: #ffffff;
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+            }
+
+            &-item {
+                font-weight: bold;
+                padding: 5px;
+                margin: 2.5px;
+                border-radius: 3px;
+            }
+        }
+    }
 }
+
 
 @import "media";
